# src/app/Models/ApiStaticKey.php
@@ -1,0 +1,16 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class ApiStaticKey extends Model
+{
+    use HasFactory;
+
+    protected $fillable = [
+        'name',
+        'key',
+    ];
+}
